--- a/index.html
+++ b/index.html
@@ -4,71 +4,110 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Torneos Suizos</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #ffcc00;
-            color: #3b4cca;
-            margin: 0;
-            padding: 0;
-            text-align: center;
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #ffcc00;
+        color: #3b4cca;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+    }
+
+    .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+    }
+
+    .card {
+        background-color: #fff;
+        border: 2px solid #3b4cca;
+        border-radius: 10px;
+        margin: 10px;
+        padding: 20px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        width: 100%;
+        max-width: 400px;
+    }
+
+    button {
+        background-color: #ff0000;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        padding: 10px 20px;
+        margin: 10px;
+        cursor: pointer;
+        font-size: 16px;
+    }
+
+    button:hover {
+        background-color: #cc0000;
+    }
+
+    input, select {
+        padding: 10px;
+        margin: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 16px;
+    }
+
+    h1, h2, h3 {
+        margin: 0 0 10px;
+        color: #3b4cca;
+    }
+
+    .bracket {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .hidden {
+        display: none;
+    }
+
+    /* Estilos para agrupar las cartas en filas */
+    .card-group {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+    }
+
+    .card-group > .card {
+        width: 100%;
+        max-width: 400px;
+    }
+
+    /* Estilos específicos para la vista de tablet en horizontal */
+    @media (min-width: 768px) and (max-width: 1024px) {
+        .card-group > .card {
+            width: 45%; /* Ajustamos el tamaño de las cartas en tablet en horizontal */
+        }
+    }
+
+    /* Estilos para asegurar que las cartas se vean de forma horizontal en pantallas grandes */
+    @media (min-width: 1025px) {
+        .card-group {
+            flex-direction: row;
+            gap: 30px;
         }
 
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px;
+        .card-group > .card {
+            width: 400px; /* Las cartas no se expanden más allá de este tamaño */
         }
+    }
 
-        .card {
-            background-color: #fff;
-            border: 2px solid #3b4cca;
-            border-radius: 10px;
-            margin: 10px;
-            padding: 20px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-            width: 80%;
-            max-width: 400px;
-        }
+    /* Eliminar puntos en la lista de jugadores */
+    #players {
+        list-style-type: none; /* Elimina los puntos de la lista */
+        padding-left: 0; /* Elimina el espacio extra a la izquierda */
+    }
+</style>
 
-        button {
-            background-color: #ff0000;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
-            margin: 10px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        button:hover {
-            background-color: #cc0000;
-        }
-
-        input, select {
-            padding: 10px;
-            margin: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 16px;
-        }
-
-        h1, h2, h3 {
-            margin: 0 0 10px;
-            color: #3b4cca;
-        }
-
-        .bracket {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .hidden {
-            display: none;
-        }
-    </style>
 </head>
 <body>
     <div class="container">
