--- a/index.html
+++ b/index.html
@@ -44,10 +44,14 @@
             </div>
         </div>
 
-        <div class="row col-12 d-flex justify-content-center mt-4">
+        <div class="row col-12 d-flex justify-content-between align-items-center mt-4">
             <div id="startTournament" class="card">
                 <h2>Iniciar Torneo</h2>
                 <button onclick="startTournament()">Iniciar</button>
+            </div>
+            <div id="lastWinnerCard" class="card hidden">
+                <h2>Último ganador del torneo</h2>
+                <ul id="logsWinner" class="list-unstyled"></ul>
             </div>
         </div>
         <div class="row col-12 d-flex justify-content-center mt-4">
